--- a/webapp1/src/main/webapp/Style/style.css
+++ b/webapp1/src/main/webapp/Style/style.css
@@ -53,7 +53,7 @@ p {
         font-size: 15pt;
 }
 
-input[type=text] {
+input[type=text], input[type=password] {
         margin: 20px auto;
         margin-top: 30px;
         width: 55%;
@@ -69,8 +69,12 @@ input[type=text] {
         background-color: inherit;
 }
 
+.buttoncontainer {
+        display: flex;
+        justify-content: space-around;
+}
+
 .formcontainer button {
-        display: block;
         margin: 50px auto;
         width: 10vw;
         border-radius: 5px;
