form validation signup

--- a/webapp1/src/main/webapp/Style/style.css
+++ b/webapp1/src/main/webapp/Style/style.css
@@ -109,6 +109,16 @@ a {
 	text-align: center;
 }
 
+#emailerror {
+        color: red;
+        text-align: center;
+}
+
+#cpasserror {
+        color: red;
+        text-align: center;
+}
+
 .foot {
         color: rgb(0,128,255);
         display: block;
